--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     </form>
 </div>
 
-// Import the functions you need from the SDKs you need
+    // Import the functions you need from the SDKs you need
 import { initializeApp } from "firebase/app";
 import { getAnalytics } from "firebase/analytics";
 // TODO: Add SDKs for Firebase products that you want to use
@@ -42,16 +42,16 @@ const firebaseConfig = {
 
 // Initialize Firebase
 const app = initializeApp(firebaseConfig);
-const db = getFirestore(app);
+const analytics = getAnalytics(app);
+    
+    // Логика кнопки
+    document.getElementById("feedbackForm").addEventListener("submit", async (e) => {
+    e.preventDefault();
 
-// Логика кнопки
-document.getElementById("feedbackForm").addEventListener("submit", async (e) => {
-  e.preventDefault();
-
-  const nameInput = document.getElementById("userName").value;
-  const emailInput = document.getElementById("userEmail").value;
-
-  try {
+    const nameInput = document.getElementById("userName").value;
+    const emailInput = document.getElementById("userEmail").value;
+    
+    try {
     // Запись в коллекцию "requests"
     await addDoc(collection(db, "requests"), {
       name: nameInput,
