--- a/index.html
+++ b/index.html
@@ -22,27 +22,29 @@
     </form>
 </div>
 
-    // Import the functions you need from the SDKs you need
-import { initializeApp } from "firebase/app";
-import { getAnalytics } from "firebase/analytics";
-// TODO: Add SDKs for Firebase products that you want to use
-// https://firebase.google.com/docs/web/setup#available-libraries
+<script type="module">
+  // Import the functions you need from the SDKs you need
+  import { initializeApp } from "https://www.gstatic.com/firebasejs/12.9.0/firebase-app.js";
+  import { getAnalytics } from "https://www.gstatic.com/firebasejs/12.9.0/firebase-analytics.js";
+  // TODO: Add SDKs for Firebase products that you want to use
+  // https://firebase.google.com/docs/web/setup#available-libraries
 
-// Your web app's Firebase configuration
-// For Firebase JS SDK v7.20.0 and later, measurementId is optional
-const firebaseConfig = {
-  apiKey: "AIzaSyAStBnaOno65FDYYlpaBktPpwDNRWZia9s",
-  authDomain: "arturpo-2fa11.firebaseapp.com",
-  projectId: "arturpo-2fa11",
-  storageBucket: "arturpo-2fa11.firebasestorage.app",
-  messagingSenderId: "771872916881",
-  appId: "1:771872916881:web:c2b0540168ba1894138630",
-  measurementId: "G-C08FRLKGNL"
-};
+  // Your web app's Firebase configuration
+  // For Firebase JS SDK v7.20.0 and later, measurementId is optional
+  const firebaseConfig = {
+    apiKey: "AIzaSyAStBnaOno65FDYYlpaBktPpwDNRWZia9s",
+    authDomain: "arturpo-2fa11.firebaseapp.com",
+    projectId: "arturpo-2fa11",
+    storageBucket: "arturpo-2fa11.firebasestorage.app",
+    messagingSenderId: "771872916881",
+    appId: "1:771872916881:web:c2b0540168ba1894138630",
+    measurementId: "G-C08FRLKGNL"
+  };
 
-// Initialize Firebase
-const app = initializeApp(firebaseConfig);
-const analytics = getAnalytics(app);
+  // Initialize Firebase
+  const app = initializeApp(firebaseConfig);
+  const analytics = getAnalytics(app);
+</script>
     
     // Логика кнопки
     document.getElementById("feedbackForm").addEventListener("submit", async (e) => {
