--- a/index.html
+++ b/index.html
@@ -1,36 +1,8 @@
-<!DOCTYPE html>
-<html lang="ru">
-<head>
-    <meta charset="UTF-8">
-    <title>Мой облачный проект</title>
-    <style>
-        body { font-family: sans-serif; display: flex; justify-content: center; padding: 50px; background-color: #f4f4f9; }
-        .form-container { background: white; padding: 25px; border-radius: 10px; box-shadow: 0 4px 15px rgba(0,0,0,0.1); width: 300px; }
-        input { width: 100%; padding: 10px; margin-bottom: 15px; border: 1px solid #ccc; border-radius: 5px; box-sizing: border-box; }
-        button { width: 100%; padding: 10px; background: #f4b400; border: none; color: white; font-weight: bold; cursor: pointer; border-radius: 5px; }
-        button:hover { background: #dfa400; }
-    </style>
-</head>
-<body>
-
-<div class="form-container">
-    <h3>Отправить заявку</h3>
-    <form id="feedbackForm">
-        <input type="text" id="userName" placeholder="Ваше имя" required>
-        <input type="email" id="userEmail" placeholder="Ваш Email" required>
-        <button type="submit">Отправить в облако</button>
-    </form>
-</div>
-
 <script type="module">
-  // Import the functions you need from the SDKs you need
   import { initializeApp } from "https://www.gstatic.com/firebasejs/12.9.0/firebase-app.js";
   import { getAnalytics } from "https://www.gstatic.com/firebasejs/12.9.0/firebase-analytics.js";
-  // TODO: Add SDKs for Firebase products that you want to use
-  // https://firebase.google.com/docs/web/setup#available-libraries
+  import { getFirestore, collection, addDoc } from "https://www.gstatic.com/firebasejs/12.9.0/firebase-firestore.js";
 
-  // Your web app's Firebase configuration
-  // For Firebase JS SDK v7.20.0 and later, measurementId is optional
   const firebaseConfig = {
     apiKey: "AIzaSyAStBnaOno65FDYYlpaBktPpwDNRWZia9s",
     authDomain: "arturpo-2fa11.firebaseapp.com",
@@ -41,31 +13,29 @@
     measurementId: "G-C08FRLKGNL"
   };
 
-  // Initialize Firebase
   const app = initializeApp(firebaseConfig);
   const analytics = getAnalytics(app);
-    
-    // Логика кнопки
-    document.getElementById("feedbackForm").addEventListener("submit", async (e) => {
+  const db = getFirestore(app);
+
+  // Логика кнопки
+  document.getElementById("feedbackForm").addEventListener("submit", async (e) => {
     e.preventDefault();
 
     const nameInput = document.getElementById("userName").value;
     const emailInput = document.getElementById("userEmail").value;
-    
+
     try {
-    // Запись в коллекцию "requests"
-    await addDoc(collection(db, "requests"), {
-      name: nameInput,
-      email: emailInput,
-      timestamp: new Date()
+      await addDoc(collection(db, "requests"), {
+        name: nameInput,
+        email: emailInput,
+        timestamp: new Date()
+      });
+
+      alert("Готово! Данные сохранены в Firebase.");
+      document.getElementById("feedbackForm").reset();
+    } catch (error) {
+      console.error("Ошибка записи: ", error);
+      alert("Ошибка при отправке.");
+    }
   });
-  alert("Готово! Данные сохранены в Firebase.");
-  document.getElementById("feedbackForm").reset();
-  } catch (error) {
-  console.error("Ошибка записи: ", error);
-  alert("Ошибка при отправке.");
-  }
-});
 </script>
-</body>
-</html>
