--- a/index.html
+++ b/index.html
@@ -1,41 +1,96 @@
+<!DOCTYPE html>
+<html lang="ru">
+<head>
+<meta charset="UTF-8">
+<title>Мой облачный проект</title>
+
+<style>
+body {
+  font-family: sans-serif;
+  display: flex;
+  justify-content: center;
+  padding: 50px;
+  background-color: #f4f4f9;
+}
+.form-container {
+  background: white;
+  padding: 25px;
+  border-radius: 10px;
+  box-shadow: 0 4px 15px rgba(0,0,0,0.1);
+  width: 300px;
+}
+input {
+  width: 100%;
+  padding: 10px;
+  margin-bottom: 15px;
+  border: 1px solid #ccc;
+  border-radius: 5px;
+  box-sizing: border-box;
+}
+button {
+  width: 100%;
+  padding: 10px;
+  background: #f4b400;
+  border: none;
+  color: white;
+  font-weight: bold;
+  cursor: pointer;
+  border-radius: 5px;
+}
+button:hover {
+  background: #dfa400;
+}
+</style>
+
+</head>
+<body>
+
+<div class="form-container">
+  <h3>Отправить заявку</h3>
+  <form id="feedbackForm">
+    <input type="text" id="userName" placeholder="Ваше имя" required>
+    <input type="email" id="userEmail" placeholder="Ваш Email" required>
+    <button type="submit">Отправить в облако</button>
+  </form>
+</div>
+
 <script type="module">
-  import { initializeApp } from "https://www.gstatic.com/firebasejs/12.9.0/firebase-app.js";
-  import { getAnalytics } from "https://www.gstatic.com/firebasejs/12.9.0/firebase-analytics.js";
-  import { getFirestore, collection, addDoc } from "https://www.gstatic.com/firebasejs/12.9.0/firebase-firestore.js";
+import { initializeApp } from "https://www.gstatic.com/firebasejs/12.9.0/firebase-app.js";
+import { getFirestore, collection, addDoc } from "https://www.gstatic.com/firebasejs/12.9.0/firebase-firestore.js";
 
-  const firebaseConfig = {
-    apiKey: "AIzaSyAStBnaOno65FDYYlpaBktPpwDNRWZia9s",
-    authDomain: "arturpo-2fa11.firebaseapp.com",
-    projectId: "arturpo-2fa11",
-    storageBucket: "arturpo-2fa11.firebasestorage.app",
-    messagingSenderId: "771872916881",
-    appId: "1:771872916881:web:c2b0540168ba1894138630",
-    measurementId: "G-C08FRLKGNL"
-  };
+const firebaseConfig = {
+  apiKey: "AIzaSyAStBnaOno65FDYYlpaBktPpwDNRWZia9s",
+  authDomain: "arturpo-2fa11.firebaseapp.com",
+  projectId: "arturpo-2fa11",
+  storageBucket: "arturpo-2fa11.firebasestorage.app",
+  messagingSenderId: "771872916881",
+  appId: "1:771872916881:web:c2b0540168ba1894138630"
+};
 
-  const app = initializeApp(firebaseConfig);
-  const analytics = getAnalytics(app);
-  const db = getFirestore(app);
+const app = initializeApp(firebaseConfig);
+const db = getFirestore(app);
 
-  // Логика кнопки
-  document.getElementById("feedbackForm").addEventListener("submit", async (e) => {
-    e.preventDefault();
+document.getElementById("feedbackForm").addEventListener("submit", async (e) => {
+  e.preventDefault();
 
-    const nameInput = document.getElementById("userName").value;
-    const emailInput = document.getElementById("userEmail").value;
+  const name = document.getElementById("userName").value;
+  const email = document.getElementById("userEmail").value;
 
-    try {
-      await addDoc(collection(db, "requests"), {
-        name: nameInput,
-        email: emailInput,
-        timestamp: new Date()
-      });
+  try {
+    await addDoc(collection(db, "requests"), {
+      name: name,
+      email: email,
+      timestamp: new Date()
+    });
 
-      alert("Готово! Данные сохранены в Firebase.");
-      document.getElementById("feedbackForm").reset();
-    } catch (error) {
-      console.error("Ошибка записи: ", error);
-      alert("Ошибка при отправке.");
-    }
-  });
+    alert("Готово! Данные сохранены.");
+    document.getElementById("feedbackForm").reset();
+  } catch (error) {
+    console.error("Ошибка:", error);
+    alert("Ошибка при отправке.");
+  }
+});
 </script>
+
+</body>
+</html>
